@@ -1,3 +1,7 @@
+2015-09-24 Christopher Thielen <cmthielen@ucdavis.edu>:
+  * LDAP queries with multiple words but no known commands now
+    perform a CN=*term1*term2* -style search
+
 2015-09-18 Christopher Thielen <cmthielen@ucdavis.edu>:
   * Added 'Good morning' responses
   * Added 'roles <loginid>' command to query Roles Management
